--- a/src/index.css
+++ b/src/index.css
@@ -44,3 +44,5 @@ ul, li {
 @import 'css/navbar.css';
 @import 'css/about.css';
 @import 'css/konstruct.css';
+@import 'css/services.css';
+@import 'css/btn.css';
