--- a/src/index.css
+++ b/src/index.css
@@ -46,3 +46,11 @@ ul, li {
 @import 'css/konstruct.css';
 @import 'css/services.css';
 @import 'css/btn.css';
+@import 'css/connection.css';
+@import 'css/newsletter.css';
+@import 'css/input.css';
+@import 'css/footer.css';
+@import 'css/company.css';
+@import 'css/links.css';
+@import 'css/contacts.css';
+@import 'css/social.css';
