--- a/src/css/btn.css
+++ b/src/css/btn.css
@@ -5,10 +5,11 @@
   background-color: #00A4E5;
   cursor: pointer;
 
+  padding: 11px 25px;
+
   font-family: Open Sans;
   font-size: 13px;
   font-weight: 700;
-  line-height: 18px;
   letter-spacing: 0.5px;
   text-align: center;
   color: white;
@@ -22,5 +23,10 @@
 }
 
 .btn:hover {
-  background-color: #0a8bee;
+  background-color: #0981de;
+}
+
+.btn__center {
+  display: flex;
+  justify-content: center;
 }
